Synth buttons,everything emmbeded,enable buttons sclang startup,Synth Buses SC

--- a/src/interesting_tperiods.org
+++ b/src/interesting_tperiods.org
@@ -6,3 +6,5 @@
   +
 + *max peak for sound levels db*
   + 05:28:30-06:34:30 | 25/08/2021
++ *morning noise*
+  + 05:00:00-09:00:00 | 08/12/2021 or 12/8?
